# textrpg

./: .gitignore  CMakeLists.txt  README.md  flake.nix
include/: Game.h  GameLogger.h  GameWindow.h  MapTile.h  PlatformFactory.h  Player.h  RivalRank.h  SaveGame.h  SaveSystem.h  World.h  game.h  game_state.h  input_utils.h
include/gameobjects/: Enemy.h  Inventory.h  Item.h  Player.h  World.h
include/screens/: TitleScreen.h
include/systems/: CombatManager.h  GlyphLayout.h  RivalSystem.h  SaveSystem.h  VulkanInterface.h  VulkanTextRenderer.h  WorldGenerator.h
include/tools/: GameLogger.h  TextRenderer.h  font8x8.h  stb_image.h  stb_image_impl.h
src/: Game.cpp  GameLogger.cpp  GameWindow.cpp  PlatformFactory.cpp  Player.cpp  World.cpp  game.cpp  input_utils.cpp  main.cpp
src/gameobjects/: Enemy.cpp  Inventory.cpp  Item.cpp  MapTile.cpp  Player.cpp  World.cpp
src/screens/: TitleScreen.cpp
src/systems/: CombatManager.cpp  GlyphLayout.cpp  RivalSystem.cpp  VulkanInterface.cpp  VulkanTextRenderer.cpp
src/tools/: GameLogger.cpp  TextRenderer.cpp  font8x8.cpp  stb_image_impl.cpp
